<resources>
    <string name="app_name">Bicycle</string>
    <string name="title_activity_main">Bicycle</string>
    <string name="title_register">Register</string>
    <string name="title_compete">Compete</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_usuario">email</string>
    <string name="label_password">password</string>
    <string name="label_start_session">start session</string>
    <string name="label_nuevoUser"><u>REGISTER</u></string>
    <string name="label_forget_password">Forgot my password?</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre y apellido</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_new_route">New Route</string>
    <string name="menu_my_routes">My Routes</string>
    <string name="menu_my_statistics">My Statistics</string>
    <string name="menu_compete">Compete</string>
    <string name="close_session">Close session</string>
    <string name="credencial_register">Credencial Register</string>
    <string name="credentials_register">Credentials Register</string>
    <string name="finished_date">Finish Date</string>
    <string name="title_activity_inicio_nav">InicioNavActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_fragment">Esta tesis fue creada por Yago Lacoste para finalizar la carrera de ingenieria en sistema en la UNICEN.
        Espero que la disfruten y salgan a competir </string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_challenge">Challenge</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_score">Score</string>
    <string name="tab_profile">PROFILE</string>
    <string name="tab_achievements">ACHIEVEMENTS</string>
    <string name="tab_classification">classification</string>
    <string name="no_records">Todavía no hay récords almacenados.</string>
    <string name="st_winner">winner</string>
    <string name="st_speed">%,d km/h</string>
    <string name="st_distance">%.2f km</string>
    <string name="st_time">%s</string>
    <string name="todo">TODO</string>
    <string name="st_compete_winner_info">Total de batallas ganadas</string>
    <string name="date">dd/mm/aaaa</string>
    <string name="st_speed_inf">Speed MAX</string>
    <string name="st_distance_inf">Maxima distancia recorrida</string>
    <string name="st_time_inf">Mejor tiempo hecho</string>
    <string name="cl_user_name">Nombre Apellido</string>
    <string name="cl_speed">%d,Km/h</string>
    <string name="cl_battles_winner">cantWinner</string>
    <string name="cl_time">%s</string>
    <string name="cl_distance">%.2f km</string>
    <string name="bicycle">BICYCLE</string>
</resources>