<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_address"
            android:title="Home" />
        <item
            android:id="@+id/nav_newroute"
            android:icon="@drawable/ic_cake"
            android:title="@string/menu_new_route" />
        <item
            android:id="@+id/nav_myroutes"
            android:icon="@drawable/ic_bicycle"
            android:title="@string/menu_my_routes" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_address"
            android:title="@string/menu_my_statistics" />
    </group>
</menu>