<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.Tesis.bicycle.Activity.ui.Home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_free_route"
        android:name="com.Tesis.bicycle.Activity.ui.NewRoute.FreeRouteFragment"
        android:label="@string/menu_new_route"
        tools:layout="@layout/fragment_free_route" />

    <fragment
        android:id="@+id/nav_my_routes"
        android:name="com.Tesis.bicycle.Activity.ui.MyRoutes.MyRoutesFragment"
        android:label="@string/menu_my_routes"
        tools:layout="@layout/fragment_my_routes" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.Tesis.bicycle.Activity.ui.Statistics.StatisticFragment"
        android:label="@string/menu_my_statistics"
        tools:layout="@layout/fragment_statistic" />
    <activity
        android:id="@+id/routeDetailsActivity"
        android:name="com.Tesis.bicycle.Activity.RouteDetailsActivity"
        android:label="activity_route_details"
        tools:layout="@layout/activity_route_details" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.Tesis.bicycle.Activity.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/registerUserActivity"
        android:name="com.Tesis.bicycle.Activity.RegisterUserActivity"
        android:label="activity_register_user"
        tools:layout="@layout/activity_register_user" />
    <action
        android:id="@+id/action_global_registerUserActivity"
        app:destination="@id/registerUserActivity" />
</navigation>